<resources>
    <string name="app_name">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_add">Add an Event</string>
    <string name="mon">Mon.</string>
    <string name="tues">Tues.</string>
    <string name="wed">Wed.</string>
    <string name="thurs">Thurs.</string>
    <string name="fri">Fri.</string>
    <string name="sat">Sat.</string>
    <string name="sun">Sun.</string>
    <string name="add_event">Add Event</string>
    <string name="del_event">Delete Event</string>
    <string name="up_event">Update Event</string>
    <string name="share_event">Share Event</string>
    <string name="about">About Us</string>
    <string name="view_event">View Event</string>
    <string name="title_activity_list_event_activty">ListEventActivty</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="user">User Name</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_search_event">SearchEvent</string>
    <string name="search">Search</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Me</string>
    <string name="app_label">Search</string>
</resources>
