<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wazifa.calendar.MainActivity">

    <item android:title="img"
          android:id="@+id/menu_add"
          android:icon="@drawable/plus"
          app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/menu_view"
          android:title="@string/view_event" />
    <item android:id="@+id/action_del"
          android:title="@string/del_event"/>
    <item android:id="@+id/menu_up"
          android:title="@string/up_event" />
    <item android:id="@+id/menu_share"
          android:title="@string/share_event" />
    <item android:id="@+id/menu_about"
          android:title="@string/about"/>


</menu>
