<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head_relative">
    <ImageView
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:id="@+id/ivleft"
        android:scaleX="1"
        android:scaleY="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Month"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:id="@+id/tvMonth"
            />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:id="@+id/ivRight"
            android:layout_marginTop="2dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:id="@+id/Mon_textview"
            style="@style/topofCalendar"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Tues_texview"
            android:text="@string/tues"
            style="@style/topofCalendar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Wed_texview"
            android:text="@string/wed"
            style="@style/topofCalendar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Thurs_texview"
            android:text="@string/thurs"
            style="@style/topofCalendar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Fri_texview"
            android:text="@string/fri"
            style="@style/topofCalendar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Sat_texview"
            android:text="@string/sat"
            style="@style/topofCalendar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Sun_texview"
            android:text="@string/sun"
            style="@style/topofCalendar"/>
    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"
        android:id="@+id/calendar_grid"></GridView>

</LinearLayout>